# LetterFeed

./: .env.example  .pre-commit-config.yaml  GEMINI.md  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: .pre-commit-config.yaml  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1ed7baeaf282_add_slug_to_newsletter.py  75ed3dbf1e16_add_search_folder_to_newsletter.py  ce35472309a4_add_auth_to_settings.py  fb190ac6937f_initial_migration.py
backend/app/: __init__.py  main.py
backend/app/core/: auth.py  config.py  database.py  hashing.py  imap.py  logging.py  scheduler.py  slug.py
backend/app/crud/: __init__.py  entries.py  newsletters.py  settings.py
backend/app/models/: __init__.py  entries.py  newsletters.py  settings.py
backend/app/routers/: __init__.py  auth.py  feeds.py  health.py  imap.py  newsletters.py
backend/app/schemas/: __init__.py  auth.py  entries.py  newsletters.py  settings.py
backend/app/services/: __init__.py  email_processor.py  feed_generator.py
backend/app/tests/: __init__.py  conftest.py  test_auth.py  test_core.py  test_crud.py  test_email_processor.py  test_email_validation.py  test_routers.py  test_services.py  test_slugs.py
frontend/: Dockerfile  jest.config.js  jest.setup.js  next.config.ts  package-lock.json  package.json
frontend/components/letterfeed/: AddNewsletterDialog.tsx  EditNewsletterDialog.tsx  Header.tsx  NewsletterCard.tsx  NewsletterDialog.tsx  NewsletterList.tsx  (+1 more)
frontend/src/: middleware.ts
(+30 files in other folders)
